# tensor-glue

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  README.md  build.sh  format.sh
tests/: CMakeLists.txt  managed_tensor.cu  managed_tensor_creation.cu  managed_tensor_ops.cu  managed_tensor_test.cu  platform_info.cpp  tensor_creation.cu  tensor_factory_test.cpp  tensor_ops.cu
tgl/: CMakeLists.txt
tgl/include/: common.h  cuda_kernels.cuh  elementwise_kernels.cuh  managed_tensor.cuh  random_kernels.cuh  slicing_kernels.cuh  tensor.h  tensor_binary_ops.cuh  tensor_factory.h  tensor_scalar_ops.cuh  tensor_unary_ops.cuh  utils.h
tgl/src/: tensor_factory.cu  utils.cpp
